[workspace]
resolver = "2"
members = [
  "base",
  "mtt",
  "cash",
]

[profile.release]
lto = true
opt-level = 3

[workspace.dependencies]
race-core = "0.0.7"
race-proc-macro = "0.0.7"
borsh = "0.9.3"
race-test = "0.0.7"

[workspace.package]
authors = ["RACE Foundation <race.game.team@gmail.com>"]
version = "0.0.5"
edition = "2021"
rust-version = "1.65.0"
license = "MPL-2.0"
repository = "https://github.com/RACE-Game/race-holdem"
documentation = "https://docs.rs/race"
homepage = "https://racepoker-v2.pages.dev"
keywords = ["blockchain"]
readme = "README.md"
