[workspace]
resolver = "2"
members = [
  "base",
  "mtt",
  "cash",
]

[profile.release]
lto = true
opt-level = 3

[workspace.dependencies]
race-api = "0.2.5"
race-proc-macro = "0.2.5"
race-test = "0.2.5"
# race-api.path = "../race/api"
# race-proc-macro.path = "../race/proc-macro"
# race-test.path = "../race/test"
borsh = "0.9.3"
anyhow = "1.0.72"

[workspace.package]
authors = ["RACE Foundation <race.game.team@gmail.com>"]
version = "0.0.5"
edition = "2021"
rust-version = "1.65.0"
license = "MPL-2.0"
repository = "https://github.com/RACE-Game/race-holdem"
documentation = "https://docs.rs/race"
homepage = "https://racepoker-v2.pages.dev"
keywords = ["blockchain"]
readme = "README.md"
