[workspace]
resolver = "2"
members = [
  "base",
  "mtt",
  "mtt-table",
  "mtt-base",
  "cash",
]

[profile.release]
lto = true
opt-level = 3

[workspace.dependencies]
# race-api = "0.2.6"
# race-proc-macro = "0.2.6"
# race-test = "0.2.6"
race-api.path = "../race/api"
race-proc-macro.path = "../race/proc-macro"
race-test.path = "../race/test"
borsh = { version = "1.5.1", features = ["derive"] }
anyhow = "1.0.72"

[workspace.package]
authors = ["RACE Foundation <race.game.team@gmail.com>"]
version = "0.0.5"
edition = "2021"
rust-version = "1.65.0"
license = "MPL-2.0"
repository = "https://github.com/RACE-Game/race-holdem"
documentation = "https://docs.rs/race"
homepage = "https://racepoker-v2.pages.dev"
keywords = ["blockchain"]
readme = "README.md"
