[package]
name = "race-holdem-mtt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
race-core.workspace = true
race-proc-macro.workspace = true
borsh.workspace = true
race-holdem-base = { path = "../base" }

[dev-dependencies]
race-test.workspace = true
anyhow.workspace = true
